<resources>
    <string name="app_name">application1</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_add_cover_image">Add Cover Image</string>
<string name="lbl_vs">VS</string>
<string name="lbl_logout">Logout</string>
<string name="lbl_65">65%</string>
<string name="msg_voy_chek_she">voy&#13;·&#13;chek&#13; shez&#13;·&#13;nee</string>
<string name="lbl_add_answer">Add answer</string>
<string name="lbl_reset_password">Reset Password</string>
<string name="lbl_description">DESCRIPTION</string>
<string name="msg_you_have_played2">You have played a total </string>
<string name="msg_take_part_in_ch">Take part in challenges with friends or other players</string>
<string name="lbl_app_navigation">App Navigation</string>
<string name="msg_6_profile_ba">6. Profile - Badge</string>
<string name="msg_4_1_create_quiz">4.1 Create Quiz - Choose Category</string>
<string name="msg_4_3_create_quiz">4.3 Create Quiz - True or False</string>
<string name="msg_any_time_is_a_g">Any time is a good time for a quiz and even better if that happens to be a football themed quiz!</string>
<string name="lbl_50">/50</string>
<string name="msg_4_2_create_quiz">4.2 Create Quiz - Multiple Choices</string>
<string name="lbl_leeds_united">Leeds United</string>
<string name="lbl_56">#56</string>
<string name="msg_4_5_create_quiz">4.5 Create Quiz - Voice Note</string>
<string name="lbl_18_quizzes">18 Quizzes</string>
<string name="lbl_clear_all">Clear all</string>
<string name="msg_4_4_create_quiz">4.4 Create Quiz - Type Answer</string>
<string name="lbl_sec"> Sec</string>
<string name="lbl_voice_note">Voice Note</string>
<string name="msg_4_7_create_quiz">4.7 Create Quiz - Poll</string>
<string name="msg_2_4_2_sign_up">2.4.2 Sign Up - Enter Password</string>
<string name="lbl_justin_bator">Justin Bator</string>
<string name="lbl_world_rank">WORLD RANK</string>
<string name="msg_what_does_uav_s">What does UAV stand for drone?</string>
<string name="msg_4_6_create_quiz">4.6 Create Quiz - Checkbox</string>
<string name="lbl_8_quizzes">8 Quizzes</string>
<string name="msg_4_8_create_quiz">4.8 Create Quiz - Puzzle</string>
<string name="msg_login_with_goog">Login with Google</string>
<string name="msg_math_12_quizz">Math \u2022 12 Quizzes</string>
<string name="lbl_42">#4</string>
<string name="lbl_quiz_category">Quiz Category</string>
<string name="lbl_add_answer2">Add Answer</string>
<string name="lbl_40">40</string>
<string name="msg_what_is_the_nam">What is the name of The Beatles\u2019 first album?</string>
<string name="msg_update_username">Update username, country, etc</string>
<string name="lbl_8_2_faq">8.2 FAQ</string>
<string name="msg_how_to_pronounc">How to pronounce Wojciech Szczesny?</string>
<string name="msg_add_false_answe">Add false answer</string>
<string name="msg_add_choice_answ">Add choice answer 1</string>
<string name="msg_answers_explana">Answers Explanation</string>
<string name="msg_question_9_of_1">QUESTION 9 OF 10</string>
<string name="lbl_type_answer">Type Answer</string>
<string name="msg_music_5_quizz">Music \u2022 5 Quizzes</string>
<string name="lbl_35">35</string>
<string name="lbl_title">Title</string>
<string name="lbl_password">Password</string>
<string name="lbl_you">, you</string>
<string name="lbl_jakob_levin">Jakob Levin</string>
<string name="lbl_37">37</string>
<string name="lbl_poll">Poll</string>
<string name="lbl_brandon_matrovs">Brandon Matrovs</string>
<string name="msg_incorrect_answe">INCORRECT ANSWER</string>
<string name="msg_5_7_live_quiz">5.7 Live Quiz - Puzzle</string>
<string name="lbl_this_month"> this month!</string>
<string name="lbl_science">Science</string>
<string name="lbl_points">POINTS</string>
<string name="lbl_20">20</string>
<string name="lbl_your_username">Your username</string>
<string name="lbl_21">21</string>
<string name="lbl_25">25%</string>
<string name="lbl_categories">Categories</string>
<string name="lbl_502">50%</string>
<string name="msg_create_a_userna">Create a username</string>
<string name="lbl_quiz_won">Quiz Won</string>
<string name="msg_5_4_1_live_quiz">5.4.1 Live Quiz - Voice Note</string>
<string name="msg_most_frequently">Most frequently asked question</string>
<string name="msg_you_have_played">You have played a total 24 quizzes this month!</string>
<string name="lbl_quiz_created">Quiz Created</string>
<string name="lbl_10">10</string>
<string name="msg_you_are_doing_b">You are doing better than 60% of other players!</string>
<string name="msg_3_1_quiz_catego">3.1 Quiz Categories</string>
<string name="lbl_sign_up">Sign Up</string>
<string name="lbl_later">Later</string>
<string name="lbl_8_10">8/10
</string>
<string name="msg_top_performance">Top performance by category</string>
<string name="msg_create_an_accou">Create an account</string>
<string name="msg_find_quizzes_to">Find quizzes to test out your knowledge</string>
<string name="lbl_privacy_policy">Privacy Policy</string>
<string name="lbl_multiple_answer">Multiple Answer</string>
<string name="msg_sign_up_with_go">Sign Up with Google</string>
<string name="msg_change_difficul">Change Difficulty</string>
<string name="lbl_20_sec">20 Sec</string>
<string name="lbl_done">Done</string>
<string name="lbl_craig_gouse">Craig Gouse</string>
<string name="lbl_2_1_login">2.1 Login</string>
<string name="msg_which_mathemati">Which mathematical symbol was the title of Ed Sheeran\u2019s first album in 2011?</string>
<string name="msg_8_10_questions">8/10
Questions Answered</string>
<string name="msg_sort_the_cartoo">Sort the cartoon name in the picture above into order</string>
<string name="lbl_good_job">Good Job!</string>
<string name="lbl_questions">Questions</string>
<string name="msg_5_5_live_quiz">5.5 Live Quiz - Checkboxes</string>
<string name="lbl_10_sec">10 Sec</string>
<string name="lbl_recent_matches">Recent matches</string>
<string name="lbl_2_569_qp">2,569 QP</string>
<string name="msg_what_is_the_bes">What is the best club in England?</string>
<string name="lbl_music">Music</string>
<string name="lbl_15_quizzes">15 Quizzes</string>
<string name="msg_sign_up_with_fa">Sign Up with Facebook</string>
<string name="lbl_watch_on">Watch on</string>
<string name="lbl_sadio_mane">Sadio Mane</string>
<string name="lbl_8_1_faq">8.1 FAQ</string>
<string name="lbl_intro">INTRO</string>
<string name="lbl_settings">Settings</string>
<string name="lbl_fulham">Fulham</string>
<string name="lbl_or">OR</string>
<string name="lbl_8_settings">8. Settings</string>
<string name="lbl_light_year">Light Year</string>
<string name="lbl_12_quizzes">12 Quizzes</string>
<string name="msg_sign_up_with_em">Sign Up with Email</string>
<string name="msg_8_3_invite_frie">8.3 Invite Friends</string>
<string name="msg_1_1_onboarding">1.1  Onboarding 3</string>
<string name="msg_how_to_create_q">How to create quiz in the app</string>
<string name="lbl_marcus_rashford">Marcus Rashford</string>
<string name="lbl2">&amp;</string>
<string name="lbl_zain_vaccaro">Zain Vaccaro</string>
<string name="lbl3">.</string>
<string name="msg_6_1_profile_s">6.1 Profile - Stats</string>
<string name="lbl_gender_male">Gender:	male</string>
<string name="lbl_3_of_3">3 of 3</string>
<string name="lbl_124_points">124 points</string>
<string name="lbl_all_time">All Time</string>
<string name="lbl_featured">FEATURED</string>
<string name="msg_5_3_live_quiz">5.3 Live Quiz - Type Answer</string>
<string name="lbl_50_qp">-50 QP</string>
<string name="msg_forgot_password">Forgot password?</string>
<string name="msg_intro_to_queezy">Intro to Queezy apps</string>
<string name="msg_travel_trivia_q">Travel Trivia Quiz</string>
<string name="lbl_top">Top</string>
<string name="lbl_monthly">Monthly</string>
<string name="msg_5_2_live_quiz">5.2 Live Quiz - True or False</string>
<string name="lbl_air">Air</string>
<string name="msg_robin_van_persi">Robin van Persie</string>
<string name="lbl_completion">COMPLETION</string>
<string name="msg_southampton_s_s">"Southampton's Sadio Mané has scored the fastest hat-trick in Premier League history in just two minutes and 56 seconds against Aston Villa on Saturday."</string>
<string name="lbl_weekly">Weekly</string>
<string name="msg_question_3_of_1">QUESTION 3 OF 10</string>
<string name="msg_create_gamified">Create gamified quizzes becomes simple</string>
<string name="msg_math_6_quizze">Math \u2022 6 Quizzes</string>
<string name="msg_5_8_quiz_comple">5.8 Quiz Completed</string>
<string name="msg_invite_friends">Invite friends and get a bonus points for every new player!</string>
<string name="lbl_recent_searches">Recent Searches</string>
<string name="msg_5_1_live_quiz">5.1 Live Quiz - Multiple Choices</string>
<string name="msg_already_have_an2">Already have an account?</string>
<string name="msg_already_have_an3">Already have an account? </string>
<string name="lbl_ma">Ma</string>
<string name="lbl_skylar_geidt">Skylar Geidt</string>
<string name="msg_5_4_live_quiz">5.4 Live Quiz - Voice Note</string>
<string name="lbl_edit_answer">Edit Answer</string>
<string name="lbl_duplicate">Duplicate</string>
<string name="msg_queezy_apps_off">Queezy apps offer gamified quizzes with many different topics to test out your knowledge.</string>
<string name="msg_with_queezy_you">With Queezy you can also take part in challenges with friends or against others.</string>
<string name="msg_choose_quiz_cat">Choose quiz category</string>
<string name="lbl_unmanned">Unmanned</string>
<string name="lbl_vs2">vs</string>
<string name="msg_statistics_math">Statistics Math Quiz</string>
<string name="msg_questions_answe">Questions Answered</string>
<string name="lbl_selected_answer">SELECTED ANSWER</string>
<string name="lbl_puzzle">Puzzle</string>
<string name="msg_alfredo_septimu">Alfredo Septimus</string>
<string name="lbl_aerial">Aerial</string>
<string name="msg_2_3_set_new_pas">2.3 Set New Password</string>
<string name="lbl_2_569_points">2,569 points</string>
<string name="msg_how_to_login_or">How to login or sign up</string>
<string name="lbl_leaderboard">Leaderboard</string>
<string name="msg_question_5_of_1">QUESTION 5 OF 10</string>
<string name="lbl_100">100%</string>
<string name="lbl_bart_simpson">Bart Simpson</string>
<string name="lbl_102">/10</string>
<string name="msg_who_wrote_the_s">"Who wrote the song 'Let's Get It On'?"</string>
<string name="msg_5_1_1_live_quiz">5.1.1 Live Quiz - Multiple Choices Answers Explanation</string>
<string name="lbl_find_friends">Find Friends</string>
<string name="msg_which_player_sc">Which player scored the fastest hat-trick in the Premier League?</string>
<string name="lbl_see_all">See all</string>
<string name="lbl_recent_quiz">RECENT QUIZ</string>
<string name="lbl_37_50">37/50</string>
<string name="lbl_325_points">325 points</string>
<string name="lbl">-</string>
<string name="msg_accuration_answ">Accuration Answer</string>
<string name="lbl_7_questions">7 questions</string>
<string name="msg_search_topics_o">Search topics or questions</string>
<string name="msg_help_and_suppor">Help and Support</string>
<string name="msg_how_do_i_play_q">How do I play quiz with other players?</string>
<string name="msg_pronunciation_e">Pronunciation	English: /ˈvɔɪtʃɛx/ VOY-chekh Polish: [ˈvɔjtɕɛx] ( listen)</string>
<string name="lbl_explanation">EXPLANATION</string>
<string name="msg_how_to_take_qui">How to take quiz in the app</string>
<string name="lbl_next">Next</string>
<string name="lbl_correct_answer">CORRECT ANSWER</string>
<string name="lbl_voice_answer">VOICE ANSWER</string>
<string name="msg_create_and_take">CREATE AND TAKE QUIZ</string>
<string name="msg_question_6_of_1">QUESTION 6 OF 10</string>
<string name="lbl_80">80%</string>
<string name="msg_word_name_origi">Word/name	origin: Polish</string>
<string name="msg_can_i_invite_my">Can I invite my friends to play quiz together?</string>
</resources>