<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="faq1VM" type="com.application.app.modules.faq1.data.viewmodel.Faq1VM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linear81FAQ"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyledeep_purple_50">
        <androidx.appcompat.widget.Toolbar android:gravity="start"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_60pxv"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearHelpSupport"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/_87pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageIcon"
                    android:layout_height="@dimen/_24pxh"
                    android:layout_marginBottom="@dimen/_6pxv"
                    android:layout_marginTop="@dimen/_6pxv"
                    android:layout_width="@dimen/_24pxh"
                    android:scaleType="fitXY" android:src="@drawable/img_icon_2"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtHelpAndSuppor"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_38pxh"
                    android:layout_weight="0.89"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{faq1VM.faq1Model.txtHelpAndSuppor}"
                    style="@style/txtRubikmedium24_1" tools:text="@string/msg_help_and_suppor"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <FrameLayout android:id="@+id/frameGroup454"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_692pxv"
            android:layout_marginEnd="@dimen/_8pxh"
            android:layout_marginStart="@dimen/_8pxh"
            android:layout_marginTop="@dimen/_24pxv" android:layout_width="@dimen/_359pxh">
            <ImageView android:id="@+id/imageBase"
                android:layout_gravity="start"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:scaleType="fitXY" android:src="@drawable/img_base"/>
            <LinearLayout android:id="@+id/linearGroup452"
                android:layout_gravity="top|center"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_40pxv"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_40pxv"
                android:layout_width="match_parent" android:orientation="vertical">
                <EditText
                    android:background="@drawable/rectangle_bg_deep_purple_50_radius_20"
                    android:drawablePadding="@dimen/_10pxh"
                    android:drawableStart="@drawable/img_icon_3"
                    android:ellipsize="end"
                    android:hint="@string/msg_search_topics_o"
                    android:id="@+id/etSearchTopicsO"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_20pxv"
                    android:paddingStart="@dimen/_16pxh"
                    android:paddingTop="@dimen/_20pxv"
                    android:singleLine="true"
                    android:text="@={faq1VM.faq1Model.etSearchTopicsOValue}"
                    android:textColorHint="@color/bluegray_400" style="@style/etSolidRounded"/>
                <EditText android:ellipsize="end"
                    android:hint="@string/lbl_intro"
                    android:id="@+id/etINTRO"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_24pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_19pxv"
                    android:paddingTop="@dimen/_2pxv"
                    android:singleLine="true"
                    android:text="@={faq1VM.faq1Model.etINTROValue}"
                    android:textColorHint="@color/gray_900_87" style="@style/etRubikmedium14"/>
                <EditText android:ellipsize="end"
                    android:hint="@string/msg_intro_to_queezy"
                    android:id="@+id/etIntroToQueezy"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_21pxv"
                    android:paddingTop="@dimen/_4pxv"
                    android:singleLine="true"
                    android:text="@={faq1VM.faq1Model.etIntroToQueezyValue}"
                    android:textColorHint="@color/gray_900" style="@style/etRubikmedium16"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtHowToLoginOr"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_15pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{faq1VM.faq1Model.txtHowToLoginOr}"
                    style="@style/txtRubikmedium16_1" tools:text="@string/msg_how_to_login_or"/>
                <EditText android:ellipsize="end"
                    android:hint="@string/msg_create_and_take"
                    android:id="@+id/etCREATEANDTAKE"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_32pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_19pxv"
                    android:paddingTop="@dimen/_2pxv"
                    android:singleLine="true"
                    android:text="@={faq1VM.faq1Model.etCREATEANDTAKEValue}"
                    android:textColorHint="@color/gray_900_87" style="@style/etRubikmedium14"/>
                <EditText android:ellipsize="end"
                    android:hint="@string/msg_how_to_create_q"
                    android:id="@+id/etHowToCreateQ"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_21pxv"
                    android:paddingTop="@dimen/_4pxv"
                    android:singleLine="true"
                    android:text="@={faq1VM.faq1Model.etHowToCreateQValue}"
                    android:textColorHint="@color/gray_900" style="@style/etRubikmedium16"/>
                <EditText android:ellipsize="end"
                    android:hint="@string/msg_how_to_take_qui"
                    android:id="@+id/etHowToTakeQui"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_21pxv"
                    android:paddingTop="@dimen/_4pxv"
                    android:singleLine="true"
                    android:text="@={faq1VM.faq1Model.etHowToTakeQuiValue}"
                    android:textColorHint="@color/gray_900" style="@style/etRubikmedium16"/>
                <EditText android:ellipsize="end"
                    android:hint="@string/msg_how_do_i_play_q"
                    android:id="@+id/etHowDoIPlayQ"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_21pxv"
                    android:paddingTop="@dimen/_4pxv"
                    android:singleLine="true"
                    android:text="@={faq1VM.faq1Model.etHowDoIPlayQValue}"
                    android:textColorHint="@color/gray_900" style="@style/etRubikmedium16"/>
                <TextView android:id="@+id/txtCanIInviteMy"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15pxv"
                    android:layout_width="match_parent"
                    android:text="@{faq1VM.faq1Model.txtCanIInviteMy}"
                    style="@style/txtRubikmedium16_1" tools:text="@string/msg_can_i_invite_my"/>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</layout>
