<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="liveQuizVoiceNoteAnswerExplanationVM" type="com.application.app.modules.livequizvoicenoteanswerexplanation.data.viewmodel.LiveQuizVoiceNoteAnswerExplanationVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linear542LiveQuiz"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyledeep_purple_400">
        <androidx.appcompat.widget.Toolbar android:gravity="start"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_60pxv"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:gravity="center_vertical"
                android:id="@+id/linearAnswerExplanat"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_68pxh"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtAnswersExplana"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.91"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{liveQuizVoiceNoteAnswerExplanationVM.liveQuizVoiceNoteAnswerExplanationModel.txtAnswersExplana}"
                    style="@style/txtGraphikmedium24_1" tools:text="@string/msg_answers_explana"/>
                <ImageView android:id="@+id/imageIcon"
                    android:layout_height="@dimen/_24pxh"
                    android:layout_marginBottom="@dimen/_6pxv"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_6pxv"
                    android:layout_width="@dimen/_24pxh"
                    android:scaleType="fitXY" android:src="@drawable/img_icon_39"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearContent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8pxv"
            android:layout_marginEnd="@dimen/_8pxh"
            android:layout_marginStart="@dimen/_8pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_5">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearQuestion"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_24pxv"
                android:layout_width="match_parent" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtQUESTION6OF1"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{liveQuizVoiceNoteAnswerExplanationVM.liveQuizVoiceNoteAnswerExplanationModel.txtQUESTION6OF1}"
                    style="@style/txtRubikmedium14_3" tools:text="@string/msg_question_6_of_1"/>
                <TextView android:id="@+id/txtHowToPronounc"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_width="match_parent"
                    android:text="@{liveQuizVoiceNoteAnswerExplanationVM.liveQuizVoiceNoteAnswerExplanationModel.txtHowToPronounc}"
                    style="@style/txtRubikmedium20" tools:text="@string/msg_how_to_pronounc"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearVoiceAnswer"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_24pxv"
                android:layout_width="match_parent" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtVOICEANSWER"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{liveQuizVoiceNoteAnswerExplanationVM.liveQuizVoiceNoteAnswerExplanationModel.txtVOICEANSWER}"
                    style="@style/txtRubikmedium14_3" tools:text="@string/lbl_voice_answer"/>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearGroup1813"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_width="match_parent"
                    android:orientation="horizontal" style="@style/groupStylegreen_400cornerRadius">
                    <ImageView android:id="@+id/imageIcon1"
                        android:layout_height="@dimen/_24pxh"
                        android:layout_marginBottom="@dimen/_16pxv"
                        android:layout_marginStart="@dimen/_16pxh"
                        android:layout_marginTop="@dimen/_16pxv"
                        android:layout_width="@dimen/_24pxh"
                        android:scaleType="fitXY" android:src="@drawable/img_icon_40"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtVoychekShe"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_16pxv"
                        android:layout_marginStart="@dimen/_16pxh"
                        android:layout_marginTop="@dimen/_16pxv"
                        android:layout_weight="0.76"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{liveQuizVoiceNoteAnswerExplanationVM.liveQuizVoiceNoteAnswerExplanationModel.txtVoychekShe}"
                        style="@style/txtGraphikregular16" tools:text="@string/msg_voy_chek_she"/>
                    <ImageView android:id="@+id/imageCorrect"
                        android:layout_height="@dimen/_32pxh"
                        android:layout_marginBottom="@dimen/_12pxv"
                        android:layout_marginEnd="@dimen/_16pxh"
                        android:layout_marginStart="@dimen/_45pxh"
                        android:layout_marginTop="@dimen/_12pxv"
                        android:layout_width="@dimen/_32pxh"
                        android:scaleType="fitXY" android:src="@drawable/img_correct"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearExplanation"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_24pxv"
                android:layout_width="match_parent" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtEXPLANATION"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{liveQuizVoiceNoteAnswerExplanationVM.liveQuizVoiceNoteAnswerExplanationModel.txtEXPLANATION}"
                    style="@style/txtRubikmedium14_3" tools:text="@string/lbl_explanation"/>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearExplanation1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_width="match_parent" android:orientation="vertical">
                    <TextView android:id="@+id/txtPronunciationE"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="@{liveQuizVoiceNoteAnswerExplanationVM.liveQuizVoiceNoteAnswerExplanationModel.txtPronunciationE}"
                        style="@style/txtRubikregular16_2" tools:text="@string/msg_pronunciation_e"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtGendermale"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_16pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{liveQuizVoiceNoteAnswerExplanationVM.liveQuizVoiceNoteAnswerExplanationModel.txtGendermale}"
                        style="@style/txtRubikregular16_2" tools:text="@string/lbl_gender_male"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtWordnameorigi"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_16pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{liveQuizVoiceNoteAnswerExplanationVM.liveQuizVoiceNoteAnswerExplanationModel.txtWordnameorigi}"
                        style="@style/txtRubikregular16_2" tools:text="@string/msg_word_name_origi"/>
                </LinearLayout>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnNext"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_16pxv"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_224pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_16pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_16pxv"
                android:singleLine="true"
                android:text="@string/lbl_next"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_4" tools:text="@string/lbl_next"/>
        </LinearLayout>
    </LinearLayout>
</layout>
